Fix TextSensitive focusable when blurred

--- a/src/assets/base.scss
+++ b/src/assets/base.scss
@@ -14,6 +14,13 @@
 
   --default-text-light: #eee;
   --default-text-dark: #111;
+
+  --outline: 0.1rem solid currentColor;
+  --outline-offset: 0.2rem;
+}
+
+:root {
+  --z-outline: 1000;
 }
 
 *,
@@ -27,9 +34,9 @@
 }
 
 :focus-visible {
-  outline: 0.1rem solid currentColor;
-  outline-offset: 0.2rem;
-  z-index: 999;
+  outline: var(--outline);
+  outline-offset: var(--outline-offset);
+  z-index: var(--z-outline);
 }
 
 html {
